manifests/base/paddock/metrics-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paddock-metrics-exporter
spec:
  ports:
    - name: paddock-metrics
      port: 8081
      targetPort: paddock-metrics
  selector:
    app.kubernetes.io/component: paddock-metrics-exporter
